src/App.css
@media screen and (min-width: 1024px) {

  div.content {
    padding: 1em;
  }

}

@media screen and (max-width: 1024px) {

  div.content {
    padding: 0.5em;
  }

  h2:first-child {
    text-align: center;
  }
}

#root {
  width: 100vw;
  height: 100vh;
}

div.app {
  width: 100%;
  height: 100%;
  display: flex;
  flex-flow: column;
}

div.content {
  display: flex;
  overflow: auto;
}

div.content > div {
  display: flex;
  flex-grow: 1;
}

